hphp/test/zend/good/ext/pcntl/tests/pcntl_fork_variation.php.skipif
<?php
	if (!extension_loaded('pcntl')) die('skip pcntl extension not available');
	elseif (!extension_loaded('posix')) die('skip posix extension not available');
?>