hphp/test/zend/bad/ext/xmlreader/tests/013.php.skipif
<?php if (!extension_loaded('xmlreader')) die('skip');?>
<?php if (!method_exists('XMLReader','setSchema')) die('skip XMLReader::setSchema() not supported');?>